Use rsync to sync code to VMs
The Ansible copy module was very slow for even this small project,
presumably because of the .git directory. rsync can exclude directories,
but even without excluding anything it's much faster.

--- a/ansible/run.yaml
+++ b/ansible/run.yaml
@@ -5,9 +5,15 @@
     srcdir: /home/{{user}}/src/prelude
   tasks:
     - name: Copy source
-      copy:
+      synchronize:
         src: ../
         dest: "{{srcdir}}"
+        rsync_opts:
+          - "--exclude=.git"
+    - name: Prepare
+      command:
+        chdir: "{{srcdir}}"
+        cmd: gmake clean
     - name: Compile
       command:
         chdir: "{{srcdir}}"
